findbugs error.
svn path=/trunk/; revision=45841


Former-commit-id: 7012ba964b2d7f5ba6229cd1242172d5abe0d01c